# $Id: Makefile.am,v 1.3 2009/09/02 08:48:47 jpc Exp $

SUBDIRS = doc etc

EXTRA_DIST = alliance.spec.in alliance.spec alliance-fedora.spec \
             dreal.png  graal.png  xfsm.png  xgra.png  xpat.png  xsch.png  xvpn.png \
             dreal.desktop  graal.desktop  xfsm.desktop  xgra.desktop  xpat.desktop \
             xsch.desktop  xvpn.desktop
